// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SCDL CLI addProducer() should create MiscScdlProducerEntity 1`] = `
{
  "_id": Any<ObjectId>,
  "name": "ALLOCATOR_2",
  "siret": "88000000000001",
}
`;

exports[`SCDL CLI initApplicationFlat creates proper applicationFlat entities in collection 1`] = `
[
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "10000000000001",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2019,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2019-01-20T23:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "SP 21/01/2019",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 60854,
    "idRAE": "NULL",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "2019-15081 - INSTITUT DE SOUDURE",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "unique",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-01-20T23:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": null,
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 60854,
    "ueNotification": null,
    "uniqueId": "99000000000001-2019-dd3c37feb8546ef496bd7144841f389e",
    "updateDate": 2025-01-16T00:00:00.000Z,
  },
]
`;

exports[`SCDL CLI parsing edge cases should add grants with exercise from its own column 1`] = `
[
  2023,
  2023,
  2023,
]
`;

exports[`SCDL CLI parsing parse persists all data in ApplicationFlat on first producer's importation 1`] = `
{
  "allocatorId": "99000000000001",
  "allocatorIdType": "siret",
  "allocatorName": "ALLOCATOR_1",
  "applicationId": "N/A",
  "applicationProviderId": "N/A",
  "beneficiaryEstablishmentId": "13579246800043",
  "beneficiaryEstablishmentIdType": "siret",
  "budgetaryYear": 2019,
  "cofinancersIdType": "N/A",
  "cofinancersNames": "N/A",
  "cofinancingRequested": "N/A",
  "confinancersId": "N/A",
  "conventionDate": 2019-05-10T00:00:00.000Z,
  "decisionDate": "N/A",
  "decisionReference": "2102661732",
  "depositDate": "N/A",
  "ej": "N/A",
  "grantedAmount": 45000,
  "idRAE": "Non",
  "instructiveDepartementId": "N/A",
  "instructiveDepartmentIdType": "N/A",
  "instructiveDepartmentName": "N/A",
  "joinKeyDesc": "N/A",
  "joinKeyId": "N/A",
  "managingAuthorityId": null,
  "managingAuthorityIdType": "N/A",
  "managingAuthorityName": "N/A",
  "nature": "Aide en numéraire",
  "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
  "paymentCondition": "UNIQUE",
  "paymentConditionDesc": "UNIQUE",
  "paymentId": "N/A",
  "paymentPeriodDates": [
    2019-05-20T00:00:00.000Z,
    2019-05-20T00:00:00.000Z,
  ],
  "pluriannual": "N/A",
  "pluriannualYears": "N/A",
  "provider": "scdl-99000000000001",
  "requestYear": "N/A",
  "requestedAmount": null,
  "scheme": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
  "statusLabel": "Accordé",
  "subScheme": "N/A",
  "subventionPercentage": 1,
  "totalAmount": 45000,
  "ueNotification": false,
  "uniqueId": "99000000000001-2019-00834ff3bb5c205a8d63f5f4e26c2161",
  "updateDate": Any<Date>,
}
`;

exports[`SCDL CLI parsing parse persists all data on first producer's importation 1`] = `
{
  "UeNotification": false,
  "__data__": {
    "conditionsVersement": "UNIQUE",
    "dateConvention": "2019-05-10",
    "datesPeriodeVersement": "2019-05-20",
    "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "idAttribuant": "",
    "idBeneficiaire": "13579246800043",
    "idRAE": "Non",
    "montant": "45000",
    "nature": "aide en numéraire",
    "nomAttribuant": "TEST_SOCLE_SCDL",
    "nomBeneficiaire": "ANNO_1",
    "notificationUE": "non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "pourcentageSubvention": "1.00",
    "referenceDecision": "2102661732",
    "rnaBeneficiaire": "W123456789",
  },
  "_id": "00834ff3bb5c205a8d63f5f4e26c2161",
  "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
  "allocatorName": "ALLOCATOR_1",
  "allocatorSiret": "99000000000001",
  "amount": 45000,
  "associationName": "ANNO_1",
  "associationRna": "W123456789",
  "associationSiret": "13579246800043",
  "conventionDate": 2019-05-10T00:00:00.000Z,
  "decisionReference": "2102661732",
  "exercice": 2019,
  "grantPercentage": 1,
  "idRAE": "Non",
  "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
  "paymentConditions": "UNIQUE",
  "paymentEndDate": 2019-05-20T00:00:00.000Z,
  "paymentNature": "aide en numéraire",
  "paymentStartDate": 2019-05-20T00:00:00.000Z,
  "updateDate": Any<Date>,
}
`;

exports[`SCDL CLI parsing parse persists new data in ApplicationFlat when data from imported exercises already in DB 1`] = `
[
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "13579246800043",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2019,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102661732",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 45000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-05-20T00:00:00.000Z,
      2019-05-20T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 45000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2019-00834ff3bb5c205a8d63f5f4e26c2161",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "11223344500034",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2019,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102763867",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 50000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-02-15T00:00:00.000Z,
      2022-02-14T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708edz27",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 0.5,
    "totalAmount": 50000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2019-fd40ad544c28c1e411e04cce9ad9b5c5",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "98876554100014",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2019,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102672573",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 5000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": "Pride Marseille 2019",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-05-30T00:00:00.000Z,
      2019-05-30T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708endyu",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 5000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2019-5bc520c60484ffb697805ccc8c79370f",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "74185296300016",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2019,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102804885",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 10000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-10-25T00:00:00.000Z,
      2019-10-25T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 10000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2019-3a8c81bcd1c51b6da984d90efd0e2991",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "74185296300016",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2020,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2020-10-21T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102804885",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 10000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-10-25T00:00:00.000Z,
      2019-10-25T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 10000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2020-837319ee01664897918da45499eda652",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "74185296300016",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2021,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2021-10-21T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102804885",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 10000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-10-25T00:00:00.000Z,
      2019-10-25T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 10000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2021-e8fdec7d238c5419c8d723503f1c9fe1",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "74185296300016",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2022,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2022-10-21T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102804885",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 10000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-10-25T00:00:00.000Z,
      2019-10-25T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 10000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2022-a033f47a16e24890f9163ffc6ea00e96",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "74185296300016",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2023,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2023-10-21T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102804885",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 10000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-10-25T00:00:00.000Z,
      2019-10-25T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 10000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2023-37a49bf6877c2a132f2eda127148f042",
    "updateDate": Any<Date>,
  },
  {
    "allocatorId": "99000000000001",
    "allocatorIdType": "siret",
    "allocatorName": "ALLOCATOR_1",
    "applicationId": "N/A",
    "applicationProviderId": "N/A",
    "beneficiaryEstablishmentId": "74185296300016",
    "beneficiaryEstablishmentIdType": "siret",
    "budgetaryYear": 2023,
    "cofinancersIdType": "N/A",
    "cofinancersNames": "N/A",
    "cofinancingRequested": "N/A",
    "confinancersId": "N/A",
    "conventionDate": 2023-10-21T00:00:00.000Z,
    "decisionDate": "N/A",
    "decisionReference": "2102804885",
    "depositDate": "N/A",
    "ej": "N/A",
    "grantedAmount": 10000,
    "idRAE": "Non",
    "instructiveDepartementId": "N/A",
    "instructiveDepartmentIdType": "N/A",
    "instructiveDepartmentName": "N/A",
    "joinKeyDesc": "N/A",
    "joinKeyId": "N/A",
    "managingAuthorityId": null,
    "managingAuthorityIdType": "N/A",
    "managingAuthorityName": "N/A",
    "nature": "Aide en numéraire",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentCondition": "UNIQUE",
    "paymentConditionDesc": "UNIQUE",
    "paymentId": "N/A",
    "paymentPeriodDates": [
      2019-10-25T00:00:00.000Z,
      2019-10-25T00:00:00.000Z,
    ],
    "pluriannual": "N/A",
    "pluriannualYears": "N/A",
    "provider": "scdl-99000000000001",
    "requestYear": "N/A",
    "requestedAmount": null,
    "scheme": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "statusLabel": "Accordé",
    "subScheme": "N/A",
    "subventionPercentage": 1,
    "totalAmount": 10000,
    "ueNotification": false,
    "uniqueId": "99000000000001-2023-cf64e035fc06fb6ebd80d1326eb5a669",
    "updateDate": Any<Date>,
  },
]
`;

exports[`SCDL CLI parsing parse persists new data when data from imported exercises already in DB 1`] = `
[
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-10",
      "datesPeriodeVersement": "2019-05-20",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
      "idAttribuant": "",
      "idBeneficiaire": "13579246800043",
      "idRAE": "Non",
      "montant": "45000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102661732",
      "rnaBeneficiaire": "W123456789",
    },
    "_id": "00834ff3bb5c205a8d63f5f4e26c2161",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-08-30",
      "datesPeriodeVersement": "2019-02-15/2022-02-14",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edz27",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "11223344500034",
      "idRAE": "Non",
      "montant": "50000",
      "nature": "aide en numéraire",
      "nomAttribuant": "",
      "nomBeneficiaire": "ANNO_2",
      "notificationUE": "non",
      "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
      "pourcentageSubvention": "0.50",
      "referenceDecision": "2102763867",
      "rnaBeneficiaire": "W123456974",
    },
    "_id": "fd40ad544c28c1e411e04cce9ad9b5c5",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edz27",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 50000,
    "associationName": "ANNO_2",
    "associationRna": "W123456974",
    "associationSiret": "11223344500034",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionReference": "2102763867",
    "exercice": 2019,
    "grantPercentage": 0.5,
    "idRAE": "Non",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2022-02-14T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-02-15T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-21",
      "datesPeriodeVersement": "2019-05-30",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708endyu",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "98876554100014",
      "idRAE": "Non",
      "montant": "5000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Pride Marseille 2019",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102672573",
      "rnaBeneficiaire": "W123158569",
    },
    "_id": "5bc520c60484ffb697805ccc8c79370f",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708endyu",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 5000,
    "associationName": "ANNO_1",
    "associationRna": "W123158569",
    "associationSiret": "98876554100014",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionReference": "2102672573",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Pride Marseille 2019",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-30T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-30T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": "3a8c81bcd1c51b6da984d90efd0e2991",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2020-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": "837319ee01664897918da45499eda652",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2020-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2020,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2021-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": "e8fdec7d238c5419c8d723503f1c9fe1",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2021-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2021,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2022-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": "a033f47a16e24890f9163ffc6ea00e96",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2022-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2022,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2023-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": "37a49bf6877c2a132f2eda127148f042",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2023-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2023-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "idAttribuant": "12000123400024",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": "cf64e035fc06fb6ebd80d1326eb5a669",
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2023-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
]
`;

exports[`SCDL CLI parsing parse registers new import in data-log 1`] = `
[
  {
    "_id": Any<String>,
    "editionDate": 2022-12-12T00:00:00.000Z,
    "fileName": "SCDL.csv",
    "integrationDate": Any<Date>,
    "providerId": "scdl-99000000000001",
    "providerName": "ALLOCATOR_1",
    "source": "FILE",
  },
]
`;

exports[`SCDL CLI parsing parse should add grants with exercise from conventionDate 1`] = `
[
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-10",
      "datesPeriodeVersement": "2019-05-20",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
      "idAttribuant": "",
      "idBeneficiaire": "13579246800043",
      "idRAE": "Non",
      "montant": "45000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102661732",
      "rnaBeneficiaire": "W123456789",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-08-30",
      "datesPeriodeVersement": "2019-02-15/2022-02-14",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edz27",
      "idAttribuant": "99000000000001",
      "idBeneficiaire": "11223344500034",
      "idRAE": "Non",
      "montant": "50000",
      "nature": "aide en numéraire",
      "nomAttribuant": "",
      "nomBeneficiaire": "ANNO_2",
      "notificationUE": "non",
      "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
      "pourcentageSubvention": "0.50",
      "referenceDecision": "2102763867",
      "rnaBeneficiaire": "W123456974",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edz27",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 50000,
    "associationName": "ANNO_2",
    "associationRna": "W123456974",
    "associationSiret": "11223344500034",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionReference": "2102763867",
    "exercice": 2019,
    "grantPercentage": 0.5,
    "idRAE": "Non",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2022-02-14T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-02-15T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-21",
      "datesPeriodeVersement": "2019-05-30",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708endyu",
      "idAttribuant": "99000000000001",
      "idBeneficiaire": "98876554100014",
      "idRAE": "Non",
      "montant": "5000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Pride Marseille 2019",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102672573",
      "rnaBeneficiaire": "W123158569",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708endyu",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 5000,
    "associationName": "ANNO_1",
    "associationRna": "W123158569",
    "associationSiret": "98876554100014",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionReference": "2102672573",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Pride Marseille 2019",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-30T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-30T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "idAttribuant": "99000000000001",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
]
`;

exports[`SCDL CLI parsing parse should add grants with exercise from its own column 1`] = `
[
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-10",
      "datesPeriodeVersement": "2019-05-20",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
      "exercice": "2022",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "13579246800043",
      "idRAE": "Non",
      "montant": "45000",
      "nature": "aide en numéraire",
      "nomAttribuant": "",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102661732",
      "rnaBeneficiaire": "W123456789",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "exercice": 2022,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-08-30",
      "datesPeriodeVersement": "2019-02-15/2022-02-14",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edz27",
      "exercice": "2023",
      "idAttribuant": "",
      "idBeneficiaire": "11223344500034",
      "idRAE": "Non",
      "montant": "50000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_2",
      "notificationUE": "non",
      "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
      "pourcentageSubvention": "0.50",
      "referenceDecision": "2102763867",
      "rnaBeneficiaire": "W123456974",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edz27",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 50000,
    "associationName": "ANNO_2",
    "associationRna": "W123456974",
    "associationSiret": "11223344500034",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionReference": "2102763867",
    "exercice": 2023,
    "grantPercentage": 0.5,
    "idRAE": "Non",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2022-02-14T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-02-15T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-21",
      "datesPeriodeVersement": "2019-05-30",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708endyu",
      "exercice": "2023",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "98876554100014",
      "idRAE": "Non",
      "montant": "5000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Pride Marseille 2019",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102672573",
      "rnaBeneficiaire": "W123158569",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708endyu",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 5000,
    "associationName": "ANNO_1",
    "associationRna": "W123158569",
    "associationSiret": "98876554100014",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionReference": "2102672573",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Pride Marseille 2019",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-30T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-30T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
  {
    "UeNotification": false,
    "__data__": {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "exercice": "2023",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "ALLOCATOR_1",
    "allocatorSiret": "99000000000001",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": Any<Date>,
  },
]
`;
